checkbox z-index problem solved

--- a/src/styles/Block.css
+++ b/src/styles/Block.css
@@ -25,6 +25,7 @@
   margin-left: 10%;
   margin-bottom: 10px;
   cursor:pointer;
+  z-index:5000;
 }
 
 .container-edit{
@@ -36,6 +37,7 @@
   display: flex;
   flex-direction: column;
   gap:5px;
+  z-index: 5002;
 }
 
 .edit-button{
@@ -62,22 +64,21 @@
 .flex {
   display: flex;
   margin-top:10px;
-
 }
+.flex2 {
+  display: flex;
+}
+
 h4{
   margin-bottom: -14px;
 }
 
 .flexspace{
+  position: relative;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 5%;
-}
-.true{
-  color:green;
-}
-.false{
-  color:red;
 }
 
 .container-edit-task{
@@ -109,7 +110,11 @@ h4{
   bottom: 3px;
   right: 3px;
   cursor:pointer;
+  z-index:50001;
 }
 .icon:active{
   scale:1.5;
+}
+.check {
+  cursor:pointer;
 }
